--- a/public/style.css
+++ b/public/style.css
@@ -100,6 +100,21 @@
   color: #fff;
 }
 
+#video_stream{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  padding: 1rem;
+  background-color: #2f80ec;
+  flex-grow: 1;
+}
+video{
+  height: 300px;
+  width: 300;
+  border-radius: 1rem;
+  margin:0.5rem;
+}
+
 @media (max-width: 700px) {
   #show_chat {
     display: flex;
