--- a/public/style.css
+++ b/public/style.css
@@ -113,7 +113,16 @@ video{
   width: 300;
   border-radius: 1rem;
   margin:0.5rem;
+  object-fit: cover;
+  transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
 }
+
+.background_red{
+  background-color: red;
+}
+
 
 @media (max-width: 700px) {
   #show_chat {
